--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
@@ -71,7 +71,8 @@
 
 \if0\blind
 {
-  \title{\bf Regularization Parameter Selection based on Validation-Error Descent with Non-smooth Criterions}
+  % Or should we say  "with Penalty Functions that are smooth almost everywhere"
+  \title{\bf Gradient-based Regularization Parameter Selection for Problems with Non-smooth Penalty Functions}
   \author{Jean Feng\thanks{
     Jean Feng was supported by NIH grants DP5OD019820 and T32CA206089.
     Noah Simon was supported by NIH grant DP5OD019820.
@@ -89,14 +90,14 @@
   \bigskip
   \bigskip
   \begin{center}
-    {\LARGE\bf Regularization Parameter Selection based on Validation-Error Descent with Non-smooth Criterions}
+    {\LARGE\bf Gradient-based Regularization Parameter Selection for Problems with Non-smooth Penalty Functions}
 \end{center}
   \medskip
 } \fi
 
 \bigskip
 \begin{abstract}
-In high-dimensional and/or non-parametric regression problems, regularization (or penalization) is used to control model complexity and induce desired structure. Each penalty has a weight parameter that indicates how strongly the structure corresponding to that penalty should be enforced. To tune these parameters, one common approach is to minimize the model error on a separate validation set. For problems with smooth optimization criterions, the gradient of the validation error with respect to the weights can be calculated. Hence a descent-based approach like gradient descent can be used. In this paper, we show how to calculate the exact gradient for problems with non-smooth penalty functions and provide an algorithm for tuning the parameters. The strength of this method is illustrated via simulations and a data analysis.
+In high-dimensional and/or non-parametric regression problems, regularization (or penalization) is used to control model complexity and induce desired structure. Each penalty has a weight parameter that indicates how strongly the structure corresponding to that penalty should be enforced. Typically the parameters are chosen to minimize the error on a separate validation set using a simple grid search or a gradient-free optimization method. Tuning parameters is more efficient if the gradient can be determined, but this is often  difficult for problems with non-smooth penalty functions. Here we show that the gradient can be calculated for regression problems with penalty functions that are smooth almost everywhere and provide an algorithm for tuning the parameters. The strength of this method is illustrated via simulations and a data analysis.
 \end{abstract}
 
 \noindent%
@@ -126,9 +127,9 @@ Here $\Lambda$ is some set that $\boldsymbol{\lambda}$ are known to be in, which
 
 The simplest approach to solving \eqref{jointopt} is brute force: one fits models over a grid of parameter values and selects the model with the lowest validation error. As long as the grid is large and fine enough, this method of ``grid search" will find a solution close to the global optimum. Unfortunately, it is computationally intractable in cases with more than two parameters since the runtime is exponential in the number of parameters.
 
-More efficient methods treat \eqref{jointopt} as a continuous optimization problem, generally through a gradient-free or gradient-based approach. Gradient-free approaches include the Nelder-Mead simplex algorithm \citep{nelder1965simplex} and Bayesian optimization \citep{snoek2012practical}, \citep{bergstra2011algorithms}, \citep{hutter2011sequential}. Although Bayesian optimization is currently the gold standard in machine learning, gradient-free methods are generally unable to tune more than twenty or so parameters whereas gradient-based methods can handle hundreds or even thousands of parameters. To calculate the gradient, one can use reverse-mode differentiation through the entire training procedure \citep{maclaurin2015gradient} or implicit differentiation of the KKT conditions \citep{larsen1998adaptive}, \citep{bengio2000gradient}, \citep{foo2008efficient}, \citep{lorbert2010descent}. To date, implicit differentiation methods have all required the optimization criterion to be smooth. In this paper, we show that the gradient can actually be calculated for many non-smooth regression problems, such as the lasso and the group lasso. Hence, we show that gradient descent, with some minor modifications, can be used to minimize the validation error over the penalty parameter space.
+More efficient methods treat \eqref{jointopt} as a continuous optimization problem, usually through a gradient-free or gradient-based approach. Gradient-free approaches include the Nelder-Mead simplex algorithm \citep{nelder1965simplex} and Bayesian optimization \citep{snoek2012practical}, \citep{bergstra2011algorithms}, \citep{hutter2011sequential}. Although Bayesian optimization is currently the gold standard in machine learning, gradient-free methods are generally unable to tune more than twenty or so parameters whereas gradient-based methods can handle hundreds or even thousands of parameters. To calculate the gradient, one can use reverse-mode differentiation through the entire training procedure \citep{maclaurin2015gradient} or implicit differentiation of the KKT conditions \citep{larsen1998adaptive}, \citep{bengio2000gradient}, \citep{foo2008efficient}, \citep{lorbert2010descent}. Existing implicit differentiation methods all require the optimization criterion to be smooth. In this paper, we show that the gradient can actually be calculated for many non-smooth regression problems, such as the lasso and the group lasso. Hence a modified gradient descent can be used to minimize the validation error over the penalty parameter space.
 
-In Section~\ref{defineDescJointOpt}, we review descent-based optimization and give a gradient descent algorithm for minimizing the validation error over the penalty parameter space. Section~\ref{sec:results} presents three simulation studies comparing our method to gradient-free methods on regression problems with two to a hundred penalty parameters. We find that our method has superior performance in situations with twenty or more penalty parameters. Section~\ref{realDataResults} applies our method to gene expression data to predict colitis status.
+In Section~\ref{defineDescJointOpt}, we review descent-based optimization and show how to calculate the gradient for regression problems with non-smooth penalty functions that are smooth almost everywhere. We then give a gradient descent algorithm for minimizing the validation error over the penalty parameter space. Section~\ref{sec:results} presents three simulation studies comparing our method to gradient-free methods on regression problems with two to a hundred penalty parameters. We find that our method has lower generalization error compared to models trained with only two penalty parameters and outperforms gradient-free approaches. Section~\ref{realDataResults} applies our method to gene expression data to predict colitis status.
 
 % \eqref{jointopt} is generally not convex and thus we may not find the global minimum with a simple descent-based approach. However, in practice we find that simple descent gives competitive solutions.
 
@@ -504,7 +505,7 @@ and
 \begin{equation}
 J(\lambda) = \left \{ i | \hat{\boldsymbol \theta}^{(i)}(\boldsymbol\lambda) \ne \boldsymbol 0 \text{ for } i=1,...,p \right \}
 \end{equation}
-Also note that $\|\cdot\|_2$ is not differentiable in any direction at ${\bf 0}$ and is differentiable in all directions elsewhere. Then $S_{\boldsymbol \lambda} = span(\boldsymbol {U}^{(1)}) \oplus ... \oplus span(\boldsymbol {U}^{(p)}) $ where $\boldsymbol {U}^{(i)} = \boldsymbol{0}$ if $\hat{\boldsymbol \theta}^{(i)}(\boldsymbol\lambda) = \boldsymbol 0$ and $\boldsymbol {U}^{(i)}$ is an orthonormal basis of $\mathcal{N}(\boldsymbol{I}_{I_i(\lambda)}\boldsymbol{D}^{(2)}_{\boldsymbol{x}_i})$ otherwise.
+The group lasso penalty $\|\cdot\|_2$ is not differentiable in any direction at ${\bf 0}$ and is differentiable in all directions elsewhere. Then $S_{\boldsymbol \lambda} = span(\boldsymbol {U}^{(1)}) \oplus ... \oplus span(\boldsymbol {U}^{(p)}) $ where $\boldsymbol {U}^{(i)} = \boldsymbol{0}$ if $\hat{\boldsymbol \theta}^{(i)}(\boldsymbol\lambda) = \boldsymbol 0$ and $\boldsymbol {U}^{(i)}$ is an orthonormal basis of $\mathcal{N}(\boldsymbol{I}_{I_i(\lambda)}\boldsymbol{D}^{(2)}_{\boldsymbol{x}_i})$ otherwise.
 
 Now we can define the locally equivalent joint optimization problem:
 \begin{equation}
@@ -632,11 +633,11 @@ for some prespecified tolerance $\delta$. For the results in this manuscript we 
 
 We now compare our gradient descent algorithm to gradient-free methods through simulation studies. Each simulation corresponds to a joint optimization problem given in Section \ref{sec:examples}. We tune the regularization parameters over a training/validation split using gradient descent, Nelder-Mead, and the Bayesian optimization solver from \citet{snoek2012practical} called Spearmint. For baseline comparison, we also solve a two-parameter version of the joint optimization problem using grid search.
 
-We compare the efficiency of the methods by the number of times the methods solved the inner training criterion (labeled ``\# Solves" in the tables below). We set this number to 100 for all three gradient-free methods. This number is variable for gradient descent.
+We compare the efficiency of the methods by the number of times the methods solved the inner training criterion (labeled ``\# Solves" in the tables below). We set this number to 100 for all three gradient-free methods. This number is variable for gradient descent since it depends on how fast the algorithm converges.
 
 % Inner training criterions were solved using the splitting conic solver (SCS) or ECOS in CVXPY \citep{cvxpy}, depending on the accuracy of the solver for the particular problem. Spearmint was allowed to solve the inner optimization problem at 100 penalty parameter points. Nelder-Mead was allowed fifty evaluations for each initialization point. Grid search was performed over a $10 \times 10$ log-spaced grid. To compare the efficiency of the methods, we provide the number of times gradient descent solved the inner optimization problem (labeled ``\# Solves"). 
 
-There are two potential computational concerns when tuning regularization parameters by gradient descent. First, the gradient calculation can be slow if the Hessian matrix in \eqref{eq:gradient_hessian} is large. \citet{bengio2000gradient} and \citet{foo2008efficient} suggest backpropagating through a Cholesky decomposition or using conjugate gradients to speed this up. This is actually not an issue for problems with non-smooth training criterions since the solutions tend to be sparse, which result in small Hessian matrices. The second concern is that the inner optimization problem must be solved to a high accuracy in order to calculate the gradient. (Recall that the gradient is derived via implicit differentiation.) To address this, we allow more iterations for solving the inner optimization problem. For a faster implementation of gradient descent, one can use a more specialized solver.
+There are two computational concerns when tuning regularization parameters by gradient descent. First, the gradient calculation can be slow if the Hessian matrix in \eqref{eq:gradient_hessian} is large. \citet{bengio2000gradient} and \citet{foo2008efficient} suggest backpropagating through a Cholesky decomposition or using conjugate gradients to speed this up. This is actually not an issue for problems with non-smooth training criterions since the solutions tend to be sparse, which result in small Hessian matrices. The second concern is that the inner optimization problem must be solved to a high accuracy in order to calculate the gradient. (Recall that the gradient is derived via implicit differentiation.) To address this, we allow more iterations for solving the inner optimization problem. For a faster implementation of gradient descent, one can use a more specialized solver.
 
 In each section below, we provide the simulation settings followed by a discussion of the results.
 
@@ -660,13 +661,13 @@ As shown in Table \ref{tab:elasticnet}, all the methods achieve similar validati
 & Validation Error & \# Solves\\
 \hline
 % (1122 + 494 - 148 - 389)/30
-Gradient Descent & 5.1963 (0.203) & 36.0 \\
+Gradient Descent & 5.20 (0.20) & 36.0 \\
 \hline
-Nelder-Mead & 5.1101 (0.196) & 50 \\
+Nelder-Mead & 5.11 (0.20) & 50 \\
 \hline
-Spearmint & 5.4877 (0.219) & 100 \\
+Spearmint & 5.49 (0.22) & 100 \\
 \hline
-Grid Search & 5.2223 (0.1838) & 100 \\
+Grid Search & 5.22 (0.18) & 100 \\
 \hline
 \end{tabular}
 \end{table}
@@ -687,9 +688,11 @@ Nelder-Mead and gradient descent were both initialized at $(10, 1, ..., 1)$ and 
 
 For baseline comparison, we also solved a two-parameter version of this joint optimization problem by pooling $\{\lambda_i\}_{i=1:p}$ into a single $\lambda_1$. Grid search was then performed over a $10 \times 10$ log-spaced grid from 1$e$-4 to $100$. 
 
-As shown in Table \ref{tab:additive}, gradient descent returned models with the lowest test error on average. Table \ref{tab:additive_average_lambda} provides the average penalty parameter values for $\lambda_0, ..., \lambda_4$. Gradient descent was indeed able to determine the smoothness of the functions. Among $f_1, f_2, f_3$, $f_1$ is the least smooth and $f_2$ is the most smooth. On average, gradient descent tuned $\lambda_1$ to have the smallest value and $\lambda_3$ to have the largest value. In contrast, Nelder-Mead wasn't able to determine the difference in smoothness between the functions and kept all penalty parameters the same. Spearmint chose a very different set of parameters that don't seem to be appropriate for the problem.
+As shown in Table \ref{tab:additive}, gradient descent returned models with the lowest test error on average. We can see that the joint optimization problem with 24 penalty parameters is sensitive to the penalty parameters chosen; Spearmint returned a result that is not only worse than gradient descent but even worse than grid search over the pooled two-parameter joint optimization problem.
 
-Figure \ref{fig:additive} provides example model fits given by gradient descent. The function estimates reflect the regularization parameters given in Table \ref{tab:additive}. The fitted values $\boldsymbol {\theta}_1$ varies the most, followed by $\boldsymbol {\theta}_3$ and $\boldsymbol {\theta}_2$. In addition, the gradient descent was able to learn that $f_4$ was the zero function.
+Table \ref{tab:additive_average_lambda} provides the average penalty parameter values for $\lambda_0, ..., \lambda_4$. Gradient descent was indeed able to determine the smoothness of the functions. It tended to choose $\lambda_1$ to have the smallest value and $\lambda_2$ to have the largest value, which corresponds to the fact that the slope for $f_1$ varies the most and the slope for $f_2$ is constant. In contrast, Nelder-Mead wasn't able to determine the difference in smoothness between the functions and kept all penalty parameters the same. Spearmint chose a very different set of parameters that don't seem to be appropriate for the problem.
+
+Figure \ref{fig:additive} provides example model fits given by gradient descent. The smoothness of the function estimates reflect the magnitude of the regularization parameters given in Table \ref{tab:additive}. In addition, gradient descent was able to learn that $f_4$ was the zero function.
 
 \begin{table}
 \caption {\label{tab:additive} A comparison of additive models with separate smoothness penalty parameters tuned by gradient descent, Nelder-Mead, and Spearmint vs. additive models with two penalty parameters tuned by grid search. Standard errors are given in parentheses.}
@@ -699,41 +702,42 @@ Figure \ref{fig:additive} provides example model fits given by gradient descent.
 & Num $\lambda$ & Validation Error & Test Error & \# Solves\\
 \hline
 % (729 + 351 - 87 - 184)/30
-Gradient Descent & 24 & 23.9121 (0.930) & 26.1543 (0.781) & 27.0 \\
+Gradient Descent & 24 & 23.91 (0.93) & 26.15 (0.78) & 27.0 \\
 \hline
-NM & 24 & 27.9132 (0.9044) & 28.7330 (0.897) & 100 \\
+NM & 24 & 27.91 (0.90) & 28.73 (0.90) & 100 \\
 \hline
-Spearmint & 24 & 32.6414 (2.033) & 37.7224 (2.173) & 100 \\
+Spearmint & 24 & 32.64 (2.03) & 37.72 (2.17) & 100 \\
 \hline
-Grid Search & 2 & 28.8509 (0.916) & 30.0333 (0.9741) & 100 \\
+Grid Search & 2 & 28.85 (0.92) & 30.03 (0.97) & 100 \\
 \hline
 \end{tabular}
 \end{table}
 
 \begin{table}
 \caption {\label{tab:additive_average_lambda} Average $\lambda_i$ values for the fitted models}
+\centering
 \begin{tabular}{| l | l | l | l | l | l | }
 \hline
 & $\lambda_0$ & $\lambda_1$ & $\lambda_2$ & $\lambda_3$ & $\lambda_4$\\
 \hline
-Gradient Descent & 9.95813557 & 0.40320043 & 1.00567796 & 0.86451697 & 1.03670712 \\
+Gradient Descent & 9.96 & 0.40 & 1.01 & 0.86 & 1.04 \\
 \hline
-Nelder-Mead & 9.68978106 & 0.90234764 & 1.00705168 & 0.99673684 & 1.00766817 \\
+Nelder-Mead & 9.69 & 0.90 & 1.01 & 1.00 & 1.00 \\
 \hline
-Spearmint & 3.3574752 & 0.76491086 & 0.0576163 & 0.00593712 & 0.03308817\\
+Spearmint & 3.36 & 0.76 & 0.06 & 0.01 & 0.03\\
 \hline
-Grid Search & 4.64731126 & 0.44005783 & -- & -- & -- \\
+Grid Search & 4.65 & 0.44 & -- & -- & -- \\
 \hline
 \end{tabular}
 \end{table}
 
 \begin{figure}
+\caption{Example model fits given by gradient descent for $f_1, f_2, f_3,$ and $ f_4$. The dashed lines are the true functions and the solid lines are the estimated functions.}
 \centering
 \includegraphics[height=50mm]{sparse_add_model_3_20_100_50_50_func0.png}
 \includegraphics[height=50mm]{sparse_add_model_3_20_100_50_50_func1.png}
 \includegraphics[height=50mm]{sparse_add_model_3_20_100_50_50_func2.png}
 \includegraphics[height=50mm]{sparse_add_model_3_20_100_50_50_func3.png}
-\caption{Example model fits given by gradient descent for $f_1, f_2, f_3,$ and $ f_4$. The dashed lines are the true functions and the solid lines are the estimated functions.}
 \label{fig:additive}
 \end{figure}
 
@@ -749,7 +753,7 @@ We compare gradient descent against all three gradient-free methods in the first
 
 For all three experiments, grid search was performed over a $10 \times 10$ grid from 1$e$-3 to $10$. Gradient descent was initialized at $0.1 \times \boldsymbol 1$ and $\boldsymbol 1$. Nelder-Mead was initialized at the same points for the first experiment.
 
-Model performance was assessed using three metrics: test error, $\beta$ error (defined as $\| \boldsymbol \beta - \hat {\boldsymbol \beta} \|_2$), and the percentage of nonzero coefficients correctly identified among all the true nonzero coefficients. As shown in Table \ref{table:unpooled}, the model tuned by gradient descent produced the lowest test error and $\beta$ error in all three experiments.
+Model performance was assessed using three metrics: test error, $\beta$ error (defined as $\| \boldsymbol \beta - \hat {\boldsymbol \beta} \|_2$), and the percentage of nonzero coefficients correctly identified among all the true nonzero coefficients. As shown in Table \ref{table:unpooled}, the model tuned by gradient descent produced the lowest test error and $\beta$ error in all three experiments. Nelder-Mead struggled to minimize the validation error and the models were very similar to the models returned by grid search on the two-parameter problem. Interestingly, Spearmint found models with small validation error but they had the worst performance by the three metrics.
 
 \begin{table}
 \caption{\label{table:unpooled} Un-pooled sparse group lasso and sparse group lasso (SGL) tuned by gradient descent and grid search, respectively. ``\% CN $\beta$" is the percentage of nonzero coefficients correctly identified among all the true nonzero coefficients. Standard errors are given in parentheses.}
@@ -765,7 +769,7 @@ Gradient Descent & 31 & 7.27 (0.30) & 87.78 (2.04) & 22.56 (1.72) & 47.55 (3.00)
 \hline
 Nelder-Mead & 31 & 8.44 (0.22) & 75.11 (2.01) & 57.27 (4.02) & 56.57 (1.98) & 100\\
 \hline
-Spearmint & 31 & 8.91 (0.32) & ?? (0.74) & 28.25 (2.56) & 60.60 (2.98) & 100\\
+Spearmint & 31 & 8.91 (0.32) & ?72? (??) & 28.25 (2.56) & 60.60 (2.98) & 100\\
 \hline
 Grid search & 2 & 8.50 (0.25) & 83.78 (2.57) & 52.32 (3.66) & 56.86 (2.10) & 100 \\
 \hline
@@ -783,7 +787,7 @@ Grid Search & 2 & 7.67 (0.20) & 84.67 (1.97) & 45.70 (2.27) & 51.34 (1.86) & 100
 & \# $\lambda$ & $\beta$ Error & \% CN $\beta$ & Validation Error & Test Error & \# Solves \\
 \hline
 %  iters 599 + 371, 1524 + 889 solves
-Gradient Descent & 101 & 6.82 (0.25) & ?? (1.05) & 18.43 (1.42) & 46.36 (1.94) & 48.1 \\
+Gradient Descent & 101 & 6.82 (0.25) & 89.78 (1.80) & 18.43 (1.42) & 46.36 (1.94) & 48.1 \\
 \hline
 Grid Search & 2 & 8.28 (0.19) & 86.00 (1.97) & 50.00 (2.16) & 57.14 (2.18) & 100 \\
 \hline
@@ -819,13 +823,15 @@ Grid Search & 2 & 86.75 (1.70) & 30.8 (5.18) & 215.90 (20.84) \\
 \end{table}
 
 \section{Discussion}
-In this paper, we have shown how to calculate the exact gradient for joint optimization problems with non-smooth penalty functions that are smooth almost everywhere. In addition, we provide an algorithm for tuning the regularization parameters via a variation of gradient descent. 
+In this paper we showed how to calculate the exact gradient for joint optimization problems with non-smooth penalty functions that are smooth almost everywhere. In addition we provide an algorithm for tuning the regularization parameters using a variation of gradient descent. 
 
-The simulation studies show that for certain problems, separating the penalty parameters can improve model performance. However, it is crucial that the regularization parameters be tuned appropriately. For the same joint optimization problem with un-pooled penalty parameters, gradient descent is able to return good model fits whereas gradient-free methods like Nelder-Mead and Bayesian optimization tend to fail. In fact, when the optimization method is unable to tune the regularization parameters appropriately, we find that a simple grid search over the pooled two-parameter joint optimization problem can result in better model fits.
+The simulation studies show that for certain problems, separating the penalty parameters can improve model performance. However, it is crucial that the regularization parameters be tuned appropriately. For the same joint optimization problem with many penalty parameters, gradient descent is able to return good model fits whereas gradient-free methods like Nelder-Mead and Bayesian optimization tend to fail. In fact, when the optimization method is unable to tune the regularization parameters appropriately, we find that a simple grid search over the pooled two-parameter joint optimization problem can result in better models.
 
-When comparing the efficiency of gradient descent, we find that gradient descent only needs to solve the inner optimization problem a limited number of times to return good model fits. This makes the method quite appealing. More work could be done to investigate how accurately the inner optimization problem needs to be solved in order to obtain good approximations of the gradient.
+Also, gradient descent tends to require a fewer number of times to solve the inner optimization problem. This makes the method quite appealing for problems that require large solve times. 
 
-Finally, an open theoretical question is the degree of overfitting when there are too many penalty parameters. The situation is similar to overfitting models to the training data, but in this case, we could potentially overfit to both the training and validation data.
+Through our simulation studies, we did find that this gradient-based approach depends on solving the inner optimization problem to a higher level of accuracy than needed for gradient-free approaches. More work could be done to investigate the degree of accuracy required for gradient descent to still be effective.
+
+Finally, an open theoretical question is how much the model complexity increases when too many penalty parameters are introduced. Similar to how model parameters can overfit to their training data, it is possible for the penalty parameters to overfit to the training and validation data.
 
 \bigskip
 
